--- a/languages/min.pot
+++ b/languages/min.pot
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Min 1.0-wpcom\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tags/_s\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/tags/min\n"
 "POT-Creation-Date: 2014-03-30 17:37:52+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -273,7 +273,7 @@ msgid "Meta"
 msgstr ""
 
 #. Theme Name of the plugin/theme
-msgid "_s"
+msgid "Min"
 msgstr ""
 
 #. Theme URI of the plugin/theme
@@ -282,7 +282,7 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid ""
-"Hi. I'm a starter theme called <code>_s</code>, or <em>underscores</em>, if "
+"Hi. I'm a starter theme called <code></code>, or <em>underscores</em>, if "
 "you like. I'm a theme meant for hacking so don't use me as a <em>Parent "
 "Theme</em>. Instead try turning me into the next, most awesome, WordPress "
 "theme out there. That's what I'm here for."
